--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link href="css/main.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=PT+Serif:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+</head>
+
+<body>
   <header>
     <h1>Beetroot (<i>Beta vulgaris</i>)</h1>
 
@@ -22,7 +25,7 @@
   <main>
 
     <figure>
-      <img src="beets.jpg" alt="">
+      <img class="beets" src="beets.jpg" alt="">
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
 
@@ -33,7 +36,7 @@
 
     <blockquote>
       <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
-      <footer>— <cite>Chris Pratt</cite></footer>
+      <footer>- <cite>Chris Pratt</cite></footer>
     </blockquote>
 
     <h2>Common varieties</h2>
